# YALOK-Programming-Language

./: CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  package.json
examples/: algorithms.yal  binary.yal  control_flow.yal  crypto.yal  functions.yal  hacker.yal  hello.yal  math.yal  objects.yal  packet.yal
include/yalok/: ast.hpp  ast_nodes.hpp  ast_statements.hpp  compiler.hpp  interpreter.hpp  lexer.hpp  memory.hpp  parser.hpp  token.hpp  value.hpp
src/: compiler.cpp  interpreter.cpp  lexer.cpp  main.cpp  memory.cpp  parser.cpp  token.cpp  value.cpp
